<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<commons.version>0.1.1-SNAPSHOT</commons.version>
		<!-- Geronimo settings -->
		<geronimo.http.port>8080</geronimo.http.port>
		<server.config.directory>${work.dir}/config</server.config.directory>
		<server.data.directory>${work.dir}/data</server.data.directory>
		<geronimo.debug.options>-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n</geronimo.debug.options>
		<geronimo.memory.options>-Xms128m -Xmx512m -XX:MaxPermSize=256m</geronimo.memory.options>
		<geronimo.options>${geronimo.memory.options} ${geronimo.debug.options}</geronimo.options>
		<!-- JBoss -->
		<geronimo.version>3.0.1</geronimo.version>
		<!-- Arquillian -->
		<arquillian.version>1.1.2.Final</arquillian.version>
		<arquillian.test.dir>${project.build.directory}/jboss</arquillian.test.dir>
		<!-- Cargo -->
		<cargo.dir>${work.dir}/cargo</cargo.dir>
		<cargo.logging>medium</cargo.logging>
	</properties>

	<groupId>com.puresoltechnologies.purifinity</groupId>
	<artifactId>server-parent</artifactId>
	<version>0.1.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Purifinity's Server Implementation</name>
	<description>In this module and all its sub-modules server components are included..</description>

	<inceptionYear>2009</inceptionYear>
	<url>http://puresol-technologies.com</url>

	<organization>
		<name>PureSol Technologies</name>
		<url>http://puresol-technologies.com</url>
	</organization>

	<licenses>
		<license>
			<name>PureSol Technologies Commercial License</name>
		</license>
	</licenses>

	<scm>
		<developerConnection>scm:git:git@git:Purifinity</developerConnection>
		<connection>scm:git:git@git:Purifinity</connection>
		<url>http://git/gitweb/</url>
		<tag>HEAD</tag>
	</scm>

	<developers>
		<developer>
			<name>Rick-Rainer Ludwig</name>
			<email>ludwig@puresol-technologies.com</email>
			<organization>PureSol Technologies</organization>
			<organizationUrl>http://puresol-technologies.com</organizationUrl>
			<url>http://rick-rainer-ludwig.com</url>
		</developer>
	</developers>

	<issueManagement>
		<system>Redmine</system>
		<url>https://bugs.puresol-technologies.net/projects/license-maven-plugin</url>
	</issueManagement>

	<ciManagement>
		<system>Jenkins</system>
		<url>https://travis-ci.org/RickRainerLudwig/license-maven-plugin</url>
	</ciManagement>

	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>libs-release</name>
			<url>http://repo/libs-release</url>
		</repository>
		<repository>
			<snapshots />
			<id>snapshots</id>
			<name>libs-snapshot</name>
			<url>http://repo/libs-snapshot</url>
		</repository>
		<repository>
			<id>JBoss</id>
			<name>JBoss</name>
			<url>https://repository.jboss.org/nexus/content/groups/public</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>plugins-release</name>
			<url>http://repo/plugins-release</url>
		</pluginRepository>
		<pluginRepository>
			<snapshots />
			<id>snapshots</id>
			<name>plugins-snapshot</name>
			<url>http://repo/plugins-snapshot</url>
		</pluginRepository>
	</pluginRepositories>

	<profiles>
		<profile>
			<id>it</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<forkMode>always</forkMode>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<!-- ================ -->
			<!-- Project internal -->
			<!-- ================ -->
			<dependency>
				<groupId>com.puresoltechnologies.purifinity</groupId>
				<artifactId>database.cassandra.utils</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.purifinity</groupId>
				<artifactId>database.cassandra.setup</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.purifinity</groupId>
				<artifactId>database.titan.utils</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.purifinity</groupId>
				<artifactId>geronimo.configuration</artifactId>
				<version>${project.version}</version>
			</dependency>
			<!-- =========================== -->
			<!-- Specific external libraries -->
			<!-- =========================== -->
			<dependency>
				<groupId>com.datastax.cassandra</groupId>
				<artifactId>cassandra-driver-core</artifactId>
				<version>2.0.0-rc2</version>
			</dependency>
			<dependency>
				<groupId>com.thinkaurelius.titan</groupId>
				<artifactId>titan-core</artifactId>
				<version>0.4.1</version>
			</dependency>
			<dependency>
				<groupId>com.thinkaurelius.titan</groupId>
				<artifactId>titan-cassandra</artifactId>
				<version>0.4.1</version>
			</dependency>
			<dependency>
				<groupId>javax</groupId>
				<artifactId>javaee-api</artifactId>
				<version>6.0</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-io</artifactId>
				<version>1.3.2</version>
			</dependency>
			<dependency>
				<groupId>org.apache.geronimo</groupId>
				<artifactId>geronimo</artifactId>
				<version>${geronimo.version}</version>
				<classifier>bin</classifier>
				<type>tar.gz</type>
			</dependency>
			<!-- Arquillian -->
			<dependency>
				<groupId>org.jboss.arquillian.junit</groupId>
				<artifactId>arquillian-junit-container</artifactId>
				<version>${arquillian.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.arquillian.core</groupId>
				<artifactId>arquillian-core-spi</artifactId>
				<version>${arquillian.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.arquillian.protocol</groupId>
				<artifactId>arquillian-protocol-servlet</artifactId>
				<version>${arquillian.version}</version>
				<scope>test</scope>
			</dependency>
			<!-- Logging -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.6.6</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>1.7.2</version>
				<scope>provided</scope>
			</dependency>
			<!-- Testing -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.10</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>1.9.0</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.5.1</version>
					<configuration>
						<source>1.7</source>
						<target>1.7</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>cassandra-maven-plugin</artifactId>
					<version>2.0.0-1</version>
					<executions>
						<execution>
							<id>startCassandra</id>
							<inherited>true</inherited>
							<phase>pre-integration-test</phase>
							<goals>
								<goal>start</goal>
							</goals>
							<configuration>
								<startNativeTransport>true</startNativeTransport>
							</configuration>
						</execution>
						<execution>
							<id>stopCassandra</id>
							<inherited>true</inherited>
							<phase>post-integration-test</phase>
							<goals>
								<goal>stop</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<startNativeTransport>true</startNativeTransport>
					</configuration>
				</plugin>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											com.puresoltechnologies.maven.plugins
										</groupId>
										<artifactId>
											license-maven-plugin
										</artifactId>
										<versionRange>
											[1.1.1,)
										</versionRange>
										<goals>
											<goal>validate</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>com.puresoltechnologies.maven.plugins</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>1.1.1</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>validate</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<recursive>true</recursive>
					<validLicenses>
						<validLicense>PureSol Technologies Commercial License</validLicense>
						<!-- Apache License -->
						<validLicense>Apache 2</validLicense>
						<validLicense>Apache License</validLicense>
						<validLicense>Apache License 2.0</validLicense>
						<validLicense>Apache License Version 2.0</validLicense>
						<validLicense>Apache License, Version 2.0</validLicense>
						<validLicense>Apache Software License - Version 2.0</validLicense>
						<validLicense>The Apache Software License, Version 2.0</validLicense>
						<!-- BSD License -->
						<validLicense>BSD</validLicense>
						<validLicense>BSD 3-Clause</validLicense>
						<validLicense>BSD License</validLicense>
						<validLicense>BSD licence</validLicense>
						<validLicense>BSD style</validLicense>
						<validLicense>ISC/BSD License</validLicense>
						<validLicense>New BSD License</validLicense>
						<!-- CDDL -->
						<validLicense>CDDL + GPLv2 with classpath exception</validLicense>
						<!-- CPL -->
						<validLicense>Common Public License Version 1.0</validLicense>
						<!-- EPL -->
						<validLicense>Eclipse Public License - Version 1.0</validLicense>
						<!-- LGPL -->
						<validLicense>LGPL 2.1</validLicense>
						<validLicense>GNU Lesser General Public License</validLicense>
						<!-- MPL -->
						<validLicenses>MPL 1.1</validLicenses>
						<!-- MIT License -->
						<validLicense>MIT License</validLicense>
						<validLicense>The MIT License</validLicense>
						<!-- Public Domain -->
						<validLicense>Public Domain</validLicense>
						<validLicense>Public domain, Sun Microsoystems</validLicense>
						<validLicense>provided without support or warranty</validLicense>
						<!-- Snaptree License -->
						<validLicense>SNAPTREE LICENSE</validLicense>
					</validLicenses>
					<approvedDependencies>
						<approvedDependency>commons-beanutils:commons-beanutils:1.7.0</approvedDependency>
						<approvedDependency>colt:colt:1.2.0</approvedDependency>
						<approvedDependency>javax.servlet:servlet-api:2.5</approvedDependency>
						<approvedDependency>org.apache.cassandra.deps:avro:1.4.0-cassandra-1</approvedDependency>
						<approvedDependency>org.antlr:antlr.*:.*</approvedDependency>
					</approvedDependencies>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>database</module>
		<module>geronimo</module>
	</modules>

</project>
